--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 3,
    "id": "3b480f2c",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 4,
    "id": "8e8c8e4b",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 5,
    "id": "35462c9e",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 6,
    "id": "377dc696",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 7,
    "id": "1eb88880",
    "metadata": {},
    "outputs": [
@@ -130,23 +130,23 @@
      "output_type": "stream",
      "text": [
       "the node has 8 number of connections\n",
-      "the connection is 0\n",
-      "the connection's value is False\n",
-      "the connection is 41\n",
-      "the connection's value is False\n",
-      "the connection is 27\n",
-      "the connection's value is False\n",
-      "the connection is 78\n",
+      "the connection is 60\n",
       "the connection's value is True\n",
-      "the connection is 44\n",
-      "the connection's value is True\n",
-      "the connection is 9\n",
-      "the connection's value is True\n",
-      "the connection is 31\n",
+      "the connection is 82\n",
       "the connection's value is False\n",
-      "the connection is 27\n",
+      "the connection is 8\n",
+      "the connection's value is True\n",
+      "the connection is 35\n",
       "the connection's value is False\n",
-      "MAIN value of the node 82 is False\n",
+      "the connection is 67\n",
+      "the connection's value is False\n",
+      "the connection is 8\n",
+      "the connection's value is True\n",
+      "the connection is 38\n",
+      "the connection's value is False\n",
+      "the connection is 98\n",
+      "the connection's value is True\n",
+      "MAIN value of the node 33 is True\n",
       "probability values are [0.037500000000000006, 0.037500000000000006, 0.30000000000000004, 0.125, 0.12500000000000003, 0.12500000000000003, 0.125, 0.125]\n"
      ]
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 8,
    "id": "a149816d",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 9,
    "id": "bd44f494",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 10,
    "id": "592a229f",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 11,
    "id": "9298913b",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 12,
    "id": "5edc0427",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 13,
    "id": "28e650c3",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 14,
    "id": "10debede",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 15,
    "id": "c755bf18",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
        "      dtype='str')"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 16,
    "id": "0a197d1e",
    "metadata": {},
    "outputs": [
@@ -588,7 +588,7 @@
        "4                        1         3       Absence  "
       ]
      },
-     "execution_count": 239,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 17,
    "id": "105f656c",
    "metadata": {},
    "outputs": [],
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 18,
    "id": "f77b9495",
    "metadata": {},
    "outputs": [],
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 19,
    "id": "e0dc7adc",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 20,
    "id": "2f1df95d",
    "metadata": {},
    "outputs": [],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 21,
    "id": "869c3dab",
    "metadata": {},
    "outputs": [],
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 22,
    "id": "014243b5",
    "metadata": {},
    "outputs": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 23,
    "id": "1a961c98",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "correct num: 29, error num: 25 ratio: 0.5370370370370371\n"
+      "correct num: 28, error num: 26 ratio: 0.5185185185185185\n"
      ]
     }
    ],
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 24,
    "id": "b4f27659",
    "metadata": {},
    "outputs": [],
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 25,
    "id": "7a987cb4",
    "metadata": {},
    "outputs": [],
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 26,
    "id": "a1be25d5",
    "metadata": {},
    "outputs": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 27,
    "id": "05588054",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 28,
    "id": "be1572f2",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\brs_c\\AppData\\Local\\Temp\\ipykernel_7716\\238125259.py:1: DtypeWarning: Columns (0: Monthly_Balance) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\brs_c\\AppData\\Local\\Temp\\ipykernel_11772\\238125259.py:1: DtypeWarning: Columns (0: Monthly_Balance) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data_train = pd.read_csv('train.csv')\n"
      ]
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 29,
    "id": "329250de",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1052,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 30,
    "id": "5949e136",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 31,
    "id": "3899ffa7",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 32,
    "id": "bd4ed193",
    "metadata": {},
    "outputs": [
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 33,
    "id": "5fd09260",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1218,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 34,
    "id": "54bd546a",
    "metadata": {},
    "outputs": [],
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 35,
    "id": "60f15bba",
    "metadata": {},
    "outputs": [
@@ -1252,7 +1252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "correct num: 36, error num: 24 ratio: 0.6\n"
+      "correct num: 37, error num: 23 ratio: 0.6166666666666667\n"
      ]
     }
    ],
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 36,
    "id": "2002dd3e",
    "metadata": {},
    "outputs": [
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 37,
    "id": "8efb3f12",
    "metadata": {},
    "outputs": [],
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 38,
    "id": "67ffa5ac",
    "metadata": {},
    "outputs": [
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 51,
    "id": "a620203e",
    "metadata": {},
    "outputs": [
@@ -1353,8 +1353,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "f520022e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correct num: 100, error num: 14 ratio: 0.8771929824561403\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_classifier = KMeans(n_clusters=len(np.unique(y)), random_state=0, n_init=\"auto\")\n",
+    "rf_classifier.fit(X_train,y_train)\n",
+    "y_pred = rf_classifier.predict(X_test)\n",
+    "\n",
+    "match_predict(y_pred,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf511538",
    "metadata": {},
    "outputs": [],
    "source": []
